--- a/BlazorMovie/Components/UIComponents/MovieListComponent.razor
+++ b/BlazorMovie/Components/UIComponents/MovieListComponent.razor
@@ -1,5 +1,6 @@
 ﻿@typeparam TMovie where TMovie : Movie
- 
+ @using BlazorMovie.Components.UIComponents
+
 <PageTitle>Movie Pro Wonder - @Title</PageTitle>
 <div class="container-xxl py-3">
     <div class="text-center mt-2 mb-3">
