--- a/BlazorMovie/Components/UIComponents/MovieCardDetails.razor
+++ b/BlazorMovie/Components/UIComponents/MovieCardDetails.razor
@@ -24,11 +24,10 @@
             <div class="d-flex justify-content-center">
                 <StarRatingComponent VoteAverage="Movie.VoteAverage" />
             </div>
+            <a class="btn cardBtn mb-3 " href="/movie/@Movie.Id">Details</a>
         </div>
-        <div class="card-footer text-end">
-            <a class="btn btn-primary mb-3 " href="/movie/@Movie.Id">Details</a>
         
-        </div>
+        
     </div>
 }
 else
@@ -44,7 +43,7 @@ else
             </p>
         </div>
         <div class="card-footer text-end">
-            <button class="btn btn-primary mb-3 disabled placeholder col-6" href="/">Details</button>
+            <button class="btn cardBtn mb-3 disabled placeholder col-6" href="/">Details</button>
         </div>
 
 </div>
