--- a/BlazorMovie/Components/UIComponents/MovieListComponent.razor
+++ b/BlazorMovie/Components/UIComponents/MovieListComponent.razor
@@ -59,7 +59,7 @@
 
 
     [Parameter]
-    public string? Title { get; set; } = "Default Title";
+    public string? Title { get; set; } = "Movies";
 
     [Parameter]
     public EventCallback<int> OnPageChanged { get; set; }
