--- a/BlazorMovie/Components/Pages/PersonDetailsPage.razor.css
+++ b/BlazorMovie/Components/Pages/PersonDetailsPage.razor.css
@@ -60,3 +60,11 @@ h1 {
     height: auto;
     border-radius: 10px;
 }
+
+.bio-section {
+    background: white;
+    padding: 1.5rem;
+    margin-bottom: 2rem;
+    border-radius: 8px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+}
