Correcting error in BackToTop Component

--- a/BlazorMovie/Components/Pages/MoviePageComponent.razor
+++ b/BlazorMovie/Components/Pages/MoviePageComponent.razor
@@ -18,6 +18,7 @@
 movies="@movies"
 Title="@Title"
 OnPageChanged="GetPage" />
+<BackToTopComponent /> 
 
 @code {
     private PageResponse<Movie>? movies;
