--- a/BlazorMovie/Components/UIComponents/BackToTopComponent.razor.css
+++ b/BlazorMovie/Components/UIComponents/BackToTopComponent.razor.css
@@ -5,12 +5,12 @@
     right: 20px;
     width: 50px;
     height: 50px;
-    background-color: var(--sjw-golden-color);
-    color: var(--sjw-secondary-color);
-    border: none;
-    border-radius: 50%;
+    background-color: var(--sjw-secondary-color);
+    color: var(--sjw-golden-color);
+    border: solid;
+    border-radius: 20%;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
-    font-size: 1.2rem;
+    font-size: 1.7rem;
     display: none; /* Initially hidden */
     align-items: center;
     justify-content: center;
@@ -22,3 +22,10 @@
     .back-to-top.show {
         display: flex !important; /* Ensure it's visible */
     }
+
+/* Hide on Mobile (max-width: 768px for tablets and phones) not generally necessary on touch screens*/
+@media (max-width: 768px) {
+    .back-to-top {
+        display: none !important;
+    }
+}
