--- a/BlazorMovie/Components/Pages/PersonDetailsPage.razor
+++ b/BlazorMovie/Components/Pages/PersonDetailsPage.razor
@@ -36,10 +36,7 @@ else
                 <PersonAKAComponent AKA="@PersonDetails?.AKA" />
 
                 <p><strong>Birthdate:</strong> @(PersonDetails?.Birthdate?.ToString("MMMM dd, yyyy") ?? "N/A")</p>
-                @if (PersonDetails?.Deathdate != null)
-                {
-                    <p><strong>Deathdate:</strong> @PersonDetails.Deathdate?.ToString("MMMM dd, yyyy")</p>
-                }
+                <PersonDeathDateComponent Deathdate="PersonDetails?.Deathdate" />
                 <p><strong>Birthplace:</strong> @(string.IsNullOrEmpty(PersonDetails?.Birthplace) ? "N/A" : PersonDetails.Birthplace)</p>
 
             </div>
