Extracted Birthdate property into its  own property component

--- a/BlazorMovie/Components/Pages/PersonDetailsPage.razor
+++ b/BlazorMovie/Components/Pages/PersonDetailsPage.razor
@@ -35,7 +35,8 @@ else
 
                 <PersonAKAComponent AKA="@PersonDetails?.AKA" />
 
-                <p><strong>Birthdate:</strong> @(PersonDetails?.Birthdate?.ToString("MMMM dd, yyyy") ?? "N/A")</p>
+                <PersonBirthdateComponent Birthdate="PersonDetails?.Birthdate" />
+
                 <PersonDeathDateComponent Deathdate="PersonDetails?.Deathdate" />
                 <p><strong>Birthplace:</strong> @(string.IsNullOrEmpty(PersonDetails?.Birthplace) ? "N/A" : PersonDetails.Birthplace)</p>
 
