--- a/BlazorMovie/Components/UIComponents/PropertyComponents/PersonDeathDateComponent.razor
+++ b/BlazorMovie/Components/UIComponents/PropertyComponents/PersonDeathDateComponent.razor
@@ -3,7 +3,7 @@
 
 @if (PersonDetails?.Deathdate != null)
 {
-    <p><strong>Deathdate:</strong> @PersonDetails.Deathdate?.ToString("MMMM dd, yyyy")</p>
+    <p><strong>Deathdate:</strong> @DisplayedDeathDate</p>
 }
 
 @code {
