--- a/BlazorMovie/Components/UIComponents/PropertyComponents/PersonBirthdateComponent.razor
+++ b/BlazorMovie/Components/UIComponents/PropertyComponents/PersonBirthdateComponent.razor
@@ -1,11 +1,10 @@
 ﻿@using BlazorMovie.Models.Credits
 @* PersonBirthdateComponent *@
 
-<p><strong>Birthdate:</strong> @PersonDetails?.Birthdate?.ToString("MMMM dd, yyyy")</p>
+<p><strong>Birthdate:</strong> @DisplayedBirthdate</p>
 
 @code {
     [Parameter]
     public DateOnly? Birthdate { get; set; }
-    public PersonDetails? PersonDetails { get; set; }
     private string DisplayedBirthdate => Birthdate?.ToString("MMMM dd, yyyy") ?? "N/A";
 }
