Extracted Birthplace property into its own property component.

--- a/BlazorMovie/Components/Pages/PersonDetailsPage.razor
+++ b/BlazorMovie/Components/Pages/PersonDetailsPage.razor
@@ -38,7 +38,8 @@ else
                 <PersonBirthdateComponent Birthdate="PersonDetails?.Birthdate" />
 
                 <PersonDeathDateComponent Deathdate="PersonDetails?.Deathdate" />
-                <p><strong>Birthplace:</strong> @(string.IsNullOrEmpty(PersonDetails?.Birthplace) ? "N/A" : PersonDetails.Birthplace)</p>
+
+                <PersonBirthplaceComponent Birthplace="@PersonDetails?.Birthplace" />
 
             </div>
         </div>
