--- a/BlazorMovie/Components/UIComponents/PropertyComponents/ProfileImageComponent.razor
+++ b/BlazorMovie/Components/UIComponents/PropertyComponents/ProfileImageComponent.razor
@@ -6,7 +6,7 @@
     public string? ProfilePath { get; set; }
 
     private string ImageSource => string.IsNullOrEmpty(ProfilePath)
-        ? "/img/ProfilePlaceholder.png"
+        ? "/img/ProfilePlaceHolder.png"
         : $"https://image.tmdb.org/t/p/w500/{ProfilePath}";
 
 }
